# marmotte

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  clippy.toml
.github/: dependatbot.yml
.github/workflows/: ci.yml  release.yml
crates/marmotte-cli/: CHANGELOG.md  Cargo.toml
crates/marmotte-cli/src/: cli.rs  error.rs  main.rs
crates/marmotte-cli/src/commands/: init.rs  mod.rs  push.rs  serve.rs
crates/marmotte-cli/tests/: init.rs  push.rs
crates/marmotte-core/: CHANGELOG.md  Cargo.toml
crates/marmotte-core/migrations/: 0001_init.sql
crates/marmotte-core/src/: auth.rs  config.rs  error.rs  gc.rs  lib.rs  models.rs  storage.rs
crates/marmotte-core/src/db/: admin_tokens.rs  api_keys.rs  blobs.rs  entries.rs  mod.rs  projects.rs  stats.rs
crates/marmotte-core/tests/fixtures/: config_minimal.toml
crates/marmotte-server/: CHANGELOG.md  Cargo.toml
crates/marmotte-server/src/: error.rs  lib.rs  metrics.rs  observability.rs  state.rs
crates/marmotte-server/src/middleware/: auth_admin.rs  auth_project.rs  mod.rs
crates/marmotte-server/src/routes/: mod.rs  public.rs  yocto.rs
crates/marmotte-server/src/routes/admin/: dto.rs  entries.rs  gc.rs  keys.rs  mod.rs  projects.rs  stats.rs  tokens.rs
crates/marmotte-server/tests/: admin_entries.rs  admin_keys.rs  admin_projects.rs  admin_tokens.rs  auth_admin.rs  auth_project.rs  public.rs  yocto.rs
crates/marmotte-server/tests/common/: mod.rs
docs/: operators.md
packaging/systemd/: marmotte.service
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: auth.rs  concurrent_put.rs  gc.rs  pagination.rs  round_trip.rs
