[workspace]
resolver = "2"
members = [
    "crates/marmotte-core",
    "crates/marmotte-server",
    "crates/marmotte-cli",
    "tests/integration",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/cledouarec/marmotte"
rust-version = "1.94.0"

[workspace.dependencies]
# Async runtime + utils
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
bytes = "1"
async-trait = "0.1"

# HTTP
axum = { version = "0.8", features = ["macros", "http2"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "timeout", "limit"] }
http = "1"
http-body-util = "0.1"

# DB
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }

# Crypto / hashing
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"

# Caching
moka = { version = "0.12", features = ["future"] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"

# Logging / metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# CLI / IO
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }

# Misc
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
rand = "0.8"
once_cell = "1"

# Dev
tempfile = "3"
reqwest-middleware = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
