[workspace]
resolver = "2"
members = [
    "crates/marmotte-core",
    "crates/marmotte-server",
    "crates/marmotte-cli",
    "tests/integration",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/cledouarec/marmotte"
rust-version = "1.94.0"

[workspace.dependencies]
# Async runtime + utils
tokio = { version = "1.52.2", features = ["full"] }
futures = "0.3.32"
futures-util = "0.3.32"
bytes = "1.11.1"
async-trait = "0.1.89"

# HTTP
axum = { version = "0.8.9", features = ["macros", "http2"] }
tower = "0.5.3"
tower-http = { version = "0.6.10", features = ["trace", "timeout", "limit"] }
http = "1.4.0"
http-body-util = "0.1.3"

# DB
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }

# Crypto / hashing
argon2 = "0.5.3"
sha2 = "0.11.0"
hex = "0.4.3"

# Caching
moka = { version = "0.12.15", features = ["future"] }

# Serialization / config
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
figment = { version = "0.10.19", features = ["toml", "env"] }
toml = "1.1.2"

# Logging / metrics
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
prometheus = "0.14.0"

# CLI / IO
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.3", default-features = false, features = ["stream", "json"] }

# Misc
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["v4"] }
base64 = "0.22.1"
rand = "0.10.1"
once_cell = "1.21.4"

# Dev
tempfile = "3.27.0"
reqwest-middleware = "0.5.1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
