[package]
name = "marmotte-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core data model, storage, auth, and GC for Marmotte (no HTTP, no CLI)."

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
moka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }
subtle = "2"

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
figment = { workspace = true, features = ["test"] }
